@@ -43,6 +43,7 @@ New user-visible features
   over time is expected to support a different PHY abstraction and error
   models.
 - (core) DES Metrics support, see the API docs for class DesMetrics.
+- (aodv) The node search radius is increased progressively (as per standard). 
 
 Bugs fixed
 ----------
@@ -51,6 +52,7 @@ Bugs fixed
 - Bug 1939 - Aggregating the same object to two nodes produce unexpected results
 - Bug 1977 - v4Ping verbose output when not explicitly stopped
 - Bug 2057 - ARP and Ndisc caches should be updated by receiving valid L3 packets
+- Bug 2123 - AODV doesn't use / honor IP TTL in the RREQ / RREP
 - Bug 2222 - incorrect EDCA behavior in case of internal collision
 - Bug 2308 - PacketTag instead of ByteTag in LTE PDCP/RLC
 - Bug 2346 - SixLowPan ConpressionThreshold can be violated.
